# pyfilter

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.txt  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py  test_requirements.txt
.github/workflows/: python-package.yml
examples/: benchmark.ipynb  covid.ipynb  earthquakes.ipynb  hare-munchers.ipynb  lorenz.ipynb  lorenz.py  multifacsv.py  nutria-pmmh.ipynb  nutria-pyro.ipynb  nutria.ipynb  self-exciting.ipynb  selfexciting.ipynb  sinus.ipynb  sinus.py  stochastic-volatility.ipynb  stochvol.py  taylor.py  timechanging.ipynb  timechanging.py
examples/InputData/: ENEL_10may19_10may20.csv
pyfilter/: __init__.py  collectors.py  constants.py  container.py  dist_builder.py  kde.py  logging.py  model.py  module.py  normalization.py  parameter.py  prior_mixin.py  prior_module.py  resampling.py  state.py  typing.py  uft.py  unscentedtransform.py  utils.py
pyfilter/algorithms/: __init__.py  base.py  iteratedfiltering.py  kernels.py  ness.py  nessmc2.py  rapf.py  smc2.py  utils.py  vb.py
pyfilter/distributions/: __init__.py  asymmetric_laplace.py  base.py  continuous.py  empirical.py  exponentials.py  joint.py  mixin.py  mvn.py  parameterized.py  parameterized_distribution.py  prior.py  prior_mixin.py  sinh_arcsinh.py  transforms.py  typing.py  utils.py  wrapper.py
pyfilter/filters/: __init__.py  apf.py  aspf.py  base.py  bootstrap.py  klf.py  linearized.py  ness.py  nessmc2.py  pf.py  rapf.py  result.py  sisr.py  smc2.py  state.py  ukf.py  upf.py  (+1 more)
test/: algorithms.py  distribution.py  distributions.py  filters.py  helpers.py  inference.py  model.py  resampling.py  timeseries.py  uft.py  utils.py
tests/: container.py  distributions.py  filters.py  inference.py  resampling.py  test_filters.py  test_inference.py  test_resampling.py  timeseries.py  utils.py
(+195 files in other folders)
